--- a/example/demo1.html
+++ b/example/demo1.html
@@ -2,68 +2,61 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>demo</title>
 <style>
-body{color:#fff;margin: 0; padding: 0;background:#000;}
-canvas{ display: block; }
-div{ position: absolute; }
+body{
+  margin: 0;
+  padding: 0;
+  background: #000;
+}
+canvas{
+  cursor: move;
+  cursor: -webkit-grab;
+  cursor: -moz-grab;
+  cursor: grab;
+  display: block;
+}
 </style>
 </head>
 <body>
-<div>
-<div>
-  vertical<input type="range" value="0" min="0" max="360" step="0.1" id="v"><br>
-  horizontal<input type="range" value="0" min="0" max="360" step="0.1" id="h">
-</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="vendor/three.min.js"></script>
 <script src="../SphereCamera.js"></script>
 <script>
 var width  = window.innerWidth,
-    height = window.innerHeight,
-    scene,
-    camera,
-    renderer,
-    helper,
-    mesh;
+    height = window.innerHeight;
 
-scene = new THREE.Scene();
+var scene = new THREE.Scene();
+var camera = new THREE.PerspectiveCamera( 40, width / height, 1, 1000 );
 
-camera = new THREE.PerspectiveCamera( 60, width / height, 1, 1000 );
-camera.position.set( 5, 5, 5 );
-camera.lookAt( new THREE.Vector3( 0, 0, 0 ) );
-
-renderer = new THREE.WebGLRenderer();
+var renderer = new THREE.WebGLRenderer();
 renderer.setSize( width, height );
-renderer.shadowMapEnabled = true;
+renderer.setClearColor( 0x000000 );
 document.body.appendChild( renderer.domElement );
 
-helper = new THREE.AxisHelper( 10 );
-scene.add( helper );
-
-mesh = new THREE.Mesh(
-  new THREE.CubeGeometry( 1, 1, 1 ),
-  new THREE.LineBasicMaterial( { color: 0xff0000 } )
+var mesh = new THREE.Mesh(
+  new THREE.CubeGeometry( 3, 3, 3 ),
+  new THREE.MeshNormalMaterial()
 );
 scene.add( mesh );
+
+var ground = new THREE.Mesh(
+  new THREE.PlaneGeometry( 64, 64, 16, 16 ),
+  new THREE.MeshBasicMaterial( { color: 0xffffff, wireframe: true } )
+);
+ground.rotation.x = Math.PI / -2;
+ground.position.y = -2;
+scene.add( ground );
+
+scene.add( new THREE.AxisHelper( 5 ) );
+
+var sphereCamera = new SphereCamera( camera, { rigidObjects: [ ground ] } );
 
 ( function renderLoop (){
   requestAnimationFrame( renderLoop );
   renderer.render( scene, camera );
 } )();
-
-
-
-instance = new SphereCamera( scene, mesh );
-instance.setDistance( 3 );
-
-$( '#v' ).on( 'change', function ( e ) {
-  instance.setPhi( this.value );
-} );
-$( '#h' ).on( 'change', function ( e ) {
-  instance.setTheta( this.value );
-} );
 
 </script>
 </body>
