--- a/example/demo2.html
+++ b/example/demo2.html
@@ -24,7 +24,7 @@ div{
 </style>
 </head>
 <body>
-<div>drag around to rotate the camera, it will be hitting with objects</div>
+<div>drag around to rotate the camera, the camera will not move into other objects, and it will be hitting with objects</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="vendor/three.min.js"></script>
